# yatify

./: .cache  .gitignore  LICENSE  README.md  cli.py  core.py  gui.py  icon.icns  main.py  pyproject.toml  requirements.txt  spotify_api.py  test_spotify_api.py  test_yandex_api.py  yandex_api.py
.github/workflows/: build.yml
